[package]
name = "usda_hardiness_zone"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
axum = "0.7.2"
lambda_http = "0.9.0"
hyper = "1.0.1"
bytes = "1.5"
http = "1"
tower = "0.4"
tower-service = "0.3"
futures-util = "0.3.29"
http-body-util = "0.1.0"
tokio = { version = "1.0", features = ["rt"] }
tower-http = { version = "0.5.0", features = [
    "cors",
    "compression-gzip",
    "compression-deflate",
    "trace",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum-aws-lambda = "0.6.0"
